Finished task+LazyIninitalizations